<resources>
    <string name="app_name">QuizzTime</string>

    <string name="title_q_1">Question 1</string>
    <string name="content_q_1">Which keyword would you use if you wanted a class to use an interface?</string>
    <string name="option_q_1_1">main()</string>
    <string name="option_q_1_2">implements</string>
    <string name="option_q_1_3">extends</string>
    <string name="title_q_2">Question 2</string>
    <string name="content_q_2">Which package is imported by default into Java programs? </string>
    <string name="option_q_2_1">java.lang</string>
    <string name="option_q_2_2">java.awt</string>
    <string name="option_q_2_3">java.awt.font</string>
    <string name="title_q_3">Question 3</string>
    <string name="content_q_3">What is the purpose of a class constructor?</string>
    <string name="option_q_3_1">To extend a class</string>
    <string name="option_q_3_2">To instantiate an object</string>
    <string name="option_q_3_3">To make objects initially have certain values when they are instantiated</string>
    <string name="title_q_4">Question 4</string>
    <string name="content_q_4">What is the main programming language for Android Development?</string>
    <string name="title_q_5">Question 5</string>
    <string name="content_q_5">Which of the following are Java keywords?</string>
    <string name="option_q_5_1">true</string>
    <string name="option_q_5_2">long</string>
    <string name="option_q_5_3">static</string>
    <string name="option_q_5_4">end</string>
    <string name="your_score_is">Your Score is</string>
    <string name="make_sure_answer_questions">Please make sure you answer all the questions</string>
</resources>
