<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:background="@drawable/quizback"
        tools:context="com.example.android.quizapp.MainActivity">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="Quiz App!"

            android:layout_gravity="center_horizontal"

            android:textAllCaps="true"
            android:textSize="32sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/title_q_1"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/content_q_1"/>
        <RadioGroup
            android:id="@+id/radiogroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:onClick="onCheckedQuestion1"
                android:text="@string/option_q_1_1"
                android:textColor="#ffffff"
                android:textSize="12sp" />
            <RadioButton
                android:id="@+id/button12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:textColor="#ffffff"
                android:onClick="onCheckedQuestion1"
                android:text="@string/option_q_1_2"
                android:textSize="12sp" />
            <RadioButton
                android:id="@+id/button13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:textColor="#ffffff"
                android:onClick="onCheckedQuestion1"
                android:text="@string/option_q_1_3"
                android:textSize="12sp" />
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/title_q_2"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/content_q_2" />
        <RadioGroup
            android:id="@+id/radiogroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/button21"
                android:textColor="#ffffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:onClick="onCheckedQuestion2"
                android:text="@string/option_q_2_1"
                android:textSize="12sp" />
            <RadioButton
                android:id="@+id/button22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:textColor="#ffffff"
                android:onClick="onCheckedQuestion2"
                android:text="@string/option_q_2_2"
                android:textSize="12sp" />
            <RadioButton
                android:id="@+id/button23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_marginLeft="6dp"
                android:onClick="onCheckedQuestion2"
                android:text="@string/option_q_2_3"
                android:textSize="12sp" />
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/title_q_3"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/content_q_3" />
        <RadioGroup
            android:id="@+id/radiogroup3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/button31"
                android:layout_width="wrap_content"
                android:textColor="#ffffff"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:onClick="onCheckedQuestion3"
                android:text="@string/option_q_3_1"
                android:textSize="12sp" />
            <RadioButton
                android:id="@+id/button32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_marginLeft="6dp"
                android:onClick="onCheckedQuestion3"
                android:text="@string/option_q_3_2"
                android:textSize="12sp" />
            <RadioButton
                android:id="@+id/button33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_marginLeft="6dp"
                android:onClick="onCheckedQuestion3"
                android:text="@string/option_q_3_3"
                android:textSize="12sp" />
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/title_q_4"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/content_q_4" />
        <EditText
            android:id="@+id/edit_text_q4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/title_q_5"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/content_q_5" />
        <CheckBox
            android:id="@+id/button51"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:textColor="#ffffff"
            android:onClick="onCheckedQuestion5"
            android:text="@string/option_q_5_1"
            android:textSize="12sp" />
        <CheckBox
            android:id="@+id/button52"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:textColor="#ffffff"
            android:onClick="onCheckedQuestion5"
            android:text="@string/option_q_5_2"
            android:textSize="12sp" />
        <CheckBox
            android:id="@+id/button53"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:textColor="#ffffff"
            android:onClick="onCheckedQuestion5"
            android:text="@string/option_q_5_3"
            android:textSize="12sp" />
        <CheckBox
            android:id="@+id/button54"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:textColor="#ffffff"
            android:onClick="onCheckedQuestion5"
            android:text="@string/option_q_5_4"
            android:textSize="12sp" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:onClick="clickSubmit"
                android:text="Submit"
                android:background="@drawable/buttonstyle"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/submit"
                android:onClick="clickReset"
                android:text="Reset"
                android:background="@drawable/buttonstyle"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>